--- a/apollo-system-sample/package.json
+++ b/apollo-system-sample/package.json
@@ -11,11 +11,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "apexcharts": "^3.20.0",
     "axios": "^0.19.2",
     "chart.js": "2.9.3",
     "core-js": "^3.6.4",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
+    "vue-apexcharts": "^1.6.0",
     "vue-chartjs": "^3.5.0",
     "vue-class-component": "^7.2.3",
     "vue-progressbar": "^0.7.5",
