--- a/apollo-system-sample/package.json
+++ b/apollo-system-sample/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "scripts": {
     "start": "npm run serve",
-    "serve": "vue-cli-service serve  --port 8080",
+    "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "predeploy": "npm run build",
+    "deploy": "aws s3 sync --profile wmega ./dist s3://apollo.kui.im/ --delete"
   },
   "dependencies": {
     "apexcharts": "^3.20.0",
@@ -61,6 +63,7 @@
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.3.0",
     "vuex-class": "^0.3.2",
-    "vuex-module-decorators": "^0.17.0"
+    "vuex-module-decorators": "^0.17.0",
+    "webpack": "^4.44.1"
   }
 }
