--- a/apollo-care-system/package.json
+++ b/apollo-care-system/package.json
@@ -18,12 +18,14 @@
     "apexcharts": "^3.20.0",
     "axios": "^0.19.2",
     "chart.js": "2.9.3",
+    "clipboard": "^2.0.6",
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.6.0",
     "vue-chartjs": "^3.5.0",
     "vue-class-component": "^7.2.3",
+    "vue-clipboard2": "^0.3.1",
     "vue-progressbar": "^0.7.5",
     "vue-property-decorator": "^8.4.1",
     "vue-router": "^3.1.6",
@@ -56,7 +58,7 @@
     "chai": "^4.1.2",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-vue": "^7.0.0-0",
+    "eslint-plugin-vue": "^6.2.2",
     "prettier": "^1.19.1",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
