--- a/apollo-care-system/tsconfig.json
+++ b/apollo-care-system/tsconfig.json
@@ -2,18 +2,19 @@
   "compilerOptions": {
     "target": "esnext",
     "module": "esnext",
-    "strict": true,
+    "strict": false,
     "jsx": "preserve",
     "importHelpers": true,
     "moduleResolution": "node",
     "experimentalDecorators": true,
-    "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "baseUrl": ".",
     "types": [
       "webpack-env",
+      "mocha",
+      "chai",
       "vuetify"
     ],
     "paths": {
