--- a/apollo-care-system/package.json
+++ b/apollo-care-system/package.json
@@ -15,6 +15,9 @@
     "deploy:dev": "aws s3 sync --profile wmega ./dist s3://apollo.kui.im/ --delete"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/vue-fontawesome": "0.1.10",
     "apexcharts": "^3.20.0",
     "axios": "^0.19.2",
     "chart.js": "2.9.3",
