--- a/apollo-care-system/package.json
+++ b/apollo-care-system/package.json
@@ -36,6 +36,7 @@
     "vuex": "^3.1.3"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "@mdi/font": "^5.1.45",
     "@types/chai": "^4.2.11",
     "@types/chart.js": "^2.9.19",
