--- a/apollo-care-system/.gitignore
+++ b/apollo-care-system/.gitignore
@@ -6,6 +6,10 @@ node_modules
 .env.local
 .env.*.local
 
+# env files
+.env.development
+.env.production
+
 # Log files
 npm-debug.log*
 yarn-debug.log*
